# ctxgrep

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
skill/: ctxgrep.md  ctxgrep.skill
skill/ctxgrep/: SKILL.md
skills/ctxgrep/: SKILL.md
src/: cli.rs  config.rs  db.rs  embed.rs  ingest.rs  main.rs  memory.rs  model.rs  output.rs  pack.rs  retrieval.rs  util.rs  watch.rs
tests/: integration.sh
tests/fixtures/: architecture.md  config.rs  meeting-notes.md  server.py  unicode.md
